# Skeleton-3D

./: .gitignore  README.md
display/: scene.h  view.h
entity/: camera.cpp  camera.h  camera.hpp  edge.h  edge.hpp  entity.h  model.h  model.hpp  point.h  point.hpp  surface.h  surface.hpp
entity/creator/: curvecreator.h  modelcreator.h  surfacecreator.h
interface/: application.cpp  application.h  serialiser.h  window.h
math3d/: global.h  main.cpp  makefile  matrix.h  matrix3.h  matrix4.h  rect_matrix.h  transform.h  vector.h  vector2.h  vector2d.cpp  vector2d.h  vector3.h  vector3d.cpp  vector3d.h  vector4.h  vector4d.cpp  vector4d.h
math3d/impl/: matrix.hpp  matrix3.hpp  matrix4.hpp  rect_matrix.hpp  vector.hpp  vector2.hpp  vector3.hpp  vector4.hpp
model/: model.cpp  model.h
model/test/: makefile  test.cpp
rendering/: aliasinger.h
src/: application.h  main.cpp  mainwindow.cpp  mainwindow.h  skeleton-3d.pro  window.cpp  window.ui
tests/: CMakeLists.txt
tests/entity/: point.hpp
tests/interface/: application_test.cpp
tests/math3d/: matrix_test.cpp  vector_test.cpp
ui/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  skeleton_3d.pro
